--- a/index.html
+++ b/index.html
@@ -2,90 +2,93 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>峥嵘聚合官网</title>
-	<meta name="keywords" content="免费阅读,钱塘阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版"> 
-	<meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学"> 
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"> 
-	<meta name="format-detection" content="telephone=no">
-    <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
-    <link href="./static/css/reset.css" rel="stylesheet">
-    <link href="./static/css/common.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./static/css/index.css" />
-	
-    <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="./static/js/func.js"></script>
+  <meta charset="UTF-8">
+  <title>牛角科技官网</title>
+  <meta name="keywords"
+    content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
+  <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
+  <link href="./static/css/reset.css" rel="stylesheet">
+  <link href="./static/css/common.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./static/css/index.css" />
+
+  <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="./static/js/func.js"></script>
 
 </head>
 
 <body>
 
-	<div class="zr_container">
-		<div class="novel-app-qd-hd">
-			<div class="novel-app-s-box">
-				<s class="novel-app-square novel-qd-square"></s>
-				<s class="novel-app-circle"></s> 
-			</div> 
-			<s class="novel-qd-wave-left"></s> 
-			<s class="novel-qd-wave-right"></s>
-		</div>
-		
-		
-		<div class="zr_header">
-			<div class="index_header">
-				<div class="header">
-				    <div class="content">
-				        <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-				        <p class="prompt">&nbsp;&nbsp;</p>
-				        <ul class="right">
-				            <li class="hover"><a href="index.html">首页</a></li>
-				            <!-- <li><a href="comic.html">漫画</a></li> -->
-				            <li><a href="expression.html">动态表情</a></li>
-							<li><a href="news.html">行业资讯</a></li>
-				            <li><a href="aboutus.html">关于我们</a></li>
-				        </ul>
-				    </div>
-				    <div class="login noLogin" style="display:none">           
-				        <a class="loginout" href="./login.html">登录</a>/
-				        <a class="loginout" href="./register.html">注册</a>
-				    </div>
-				    <div class="login showLogin" style="display:none">           
-				        <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
-				    </div>
-				</div>
-			</div>
-			
-			<div class="zr_header_banner">
-				<div class="banner_text">
-					<h3>海量精品 畅读无限</h3>
-					<p>海量小说，超多精品热门小说</p>
-					<p>IP剧，热播剧，影视剧，原创专场等小说品牌</p>
-					<p>带你在方寸间领略三千大世界</p>
-					<div class="novel-hd-app-dld"> 
-						<a href="http://download.ios.zrjhwenhua.cn" class="novel-hd-app-btn" target="_blank">
-							<i class="icon-ios"></i>苹果版下载 
-						</a>
-						<a href="http://download.zrjhwenhua.com/akxs/share/xiaoshuo.apk" data-href="http://download.zrjhwenhua.com/akxs/share/xiaoshuo.apk" class="novel-hd-app-btn" target="_blank">
-							<i class="icon-android"></i>安卓版下载 
-						</a>
-					</div>
-				</div>
-				<div class="banner_img">
-					<img src="./static/images/hlxs-web-phone.png">
-				</div>
-			</div>
-		</div>
-	</div>
-    <img src="./static/images/bg.jpg" width="100%" />
-    <div class="footer">
-        <div class="bottom"></div>
+  <div class="zr_container">
+    <div class="novel-app-qd-hd">
+      <div class="novel-app-s-box">
+        <s class="novel-app-square novel-qd-square"></s>
+        <s class="novel-app-circle"></s>
+      </div>
+      <s class="novel-qd-wave-left"></s>
+      <s class="novel-qd-wave-right"></s>
     </div>
-    <!-- <div style="position:fixed;right:2px;top:250px;width:120px;height:120px">
+
+
+    <div class="zr_header">
+      <div class="index_header">
+        <div class="header">
+          <div class="content">
+            <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+            <p class="prompt">&nbsp;&nbsp;</p>
+            <ul class="right">
+              <li class="hover"><a href="index.html">首页</a></li>
+              <!-- <li><a href="comic.html">漫画</a></li> -->
+              <li><a href="expression.html">动态表情</a></li>
+              <li><a href="news.html">行业资讯</a></li>
+              <li><a href="aboutus.html">关于我们</a></li>
+            </ul>
+          </div>
+          <div class="login noLogin" style="display:none">
+            <a class="loginout" href="./login.html">登录</a>/
+            <a class="loginout" href="./register.html">注册</a>
+          </div>
+          <div class="login showLogin" style="display:none">
+            <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="zr_header_banner">
+        <div class="banner_text">
+          <h3>海量精品 畅读无限</h3>
+          <p>海量小说，超多精品热门小说</p>
+          <p>IP剧，热播剧，影视剧，原创专场等小说品牌</p>
+          <p>带你在方寸间领略三千大世界</p>
+          <!-- <div class="novel-hd-app-dld">
+            <a href="http://download.ios.zrjhwenhua.cn" class="novel-hd-app-btn" target="_blank">
+              <i class="icon-ios"></i>苹果版下载
+            </a>
+            <a href="http://download.zrjhwenhua.com/akxs/share/xiaoshuo.apk"
+              data-href="http://download.zrjhwenhua.com/akxs/share/xiaoshuo.apk" class="novel-hd-app-btn"
+              target="_blank">
+              <i class="icon-android"></i>安卓版下载
+            </a>
+          </div> -->
+        </div>
+        <div class="banner_img">
+          <img src="./static/images/hlxs-web-phone.png">
+        </div>
+      </div>
+    </div>
+  </div>
+  <img src="./static/images/bg.jpg" width="100%" />
+  <div class="footer">
+    <div class="bottom"></div>
+  </div>
+  <!-- <div style="position:fixed;right:2px;top:250px;width:120px;height:120px">
         <img width="120px" src="./static/images/tt-self003.png">
     </div> -->
-    <script src="./static/js/common.js"></script>
-    <!-- <script src="./static/js/login.js"></script> -->
-    <!-- <div class="isLogin hidden">
+  <script src="./static/js/common.js"></script>
+  <!-- <script src="./static/js/login.js"></script> -->
+  <!-- <div class="isLogin hidden">
         <div class="close" id="closeLogin">X</div>
         <div class="com-login verify-form com-login-width rel"><h1 class="f32 mt30 pl12">您好，请登录</h1>
             <form method="post" class="mt30">
