--- a/news.html
+++ b/news.html
@@ -2,180 +2,194 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>峥嵘聚合_行业资讯</title>
-	<meta name="keywords" content="免费阅读,钱塘阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版"> 
-	<meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学"> 
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"> 
-	<meta name="format-detection" content="telephone=no">
-    <meta http-equiv="Content-Disposition" content="attachment;">
-    <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
-    <link href="./static/css/reset.css" rel="stylesheet">
-    <link href="./static/css/common.css" rel="stylesheet">
-    <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="./static/js/func.js"></script>
+  <meta charset="UTF-8">
+  <title>行业资讯_牛角科技</title>
+  <meta name="keywords"
+    content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
+  <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="Content-Disposition" content="attachment;">
+  <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
+  <link href="./static/css/reset.css" rel="stylesheet">
+  <link href="./static/css/common.css" rel="stylesheet">
+  <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="./static/js/func.js"></script>
 </head>
 <style>
-    .caselist{
-        position: relative;
-        overflow: hidden;
-        border: #C0E5F7 5px solid;
-        border-radius: 15px;
-    }
-    .tagImg1{
-        position: absolute;
-    }
-    .tagDiv1{
-        position: absolute;
-        z-index: 2;
-        top:350px;
-    }
-	.war{
-		font-style:italic;
-		width: 25px;
-		height: 100px;
-		line-height: 25px;
-		font-size: 14px;
-		text-align: center;
-		color: black;
-		/*background-color: #9ad3f0;*/
-		position: absolute;
-		top: 4px;
-		left: 4px;
-		border-radius:5px;
-		letter-spacing: 2px;
-	}
-	.float_li{
-		position: relative;
-	}
-    .black_overlay{ 
-		display: none; 
-		position: absolute; 
-		top: 0%; 
-		left: 0%; 
-		width: 100%; 
-		height: 2000px; 
-		background-color: black; 
-		z-index:1001; 
-		-moz-opacity: 0.8; 
-		opacity:.80; 
-		filter: alpha(opacity=88); 
-	} 
-	.white_content { 
-		display: none; 
-		position: absolute; 
-		border-radius:10px;
-		top: 75%; 
-		left: 35%; 
-		width: 30%; 
-		height: 50%; 
-		padding: 40px; 
-		background-color: white; 
-		z-index:1002; 
-		overflow: auto; 
-	} 
-	
-	.news-list{
-		width: 800px;
-		padding: 24px;
-		border: 1px solid #efefef;
-		margin: 20px auto;
-	}
-	.news-item{
-		padding: 8px 0;
-		line-height: 32px;
-		border-bottom: 1px solid #EEEEEE;
-	}
-	.news-item a{
-		display: block;
-	}
-	
-	.news-item a:hover{
-		color: #359AD2;
-		
-	}
-	.news-item p>i{
-		font-style: normal;
-		font-size: 12px;
-		color: #666666;
-	}
-	.news-item p>span{
-		float: right;
-	}
-	.amountLayer{
-		position: fixed;
-		z-index: 998;
-		background: #FFFFFF;
-		font-size: 15px;
-		text-align: center;
-		width: 400px;
-		height: 200px;
-		left: 50%;
-		top: 50%;
-		transform: translateX(-200px) translateY(-100px);
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		box-shadow:0px 2px 8px 0px rgba(0,0,0,0.16);
-		border-radius:4px;
-		display: none;
-	}
-	.amountLayer span,
-	.amountTips{
-		color: #359AD2;
-	}
-	.loginTips,
-	.registerTips{
-		cursor: pointer;
-	}
-	
-</style>
-<body>
-    <div class="header">
-        <div class="content">
-            <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-            <p class="prompt">&nbsp;&nbsp;</p>
-            <ul class="right">
-                <li><a href="index.html">首页</a></li>
-                <!-- <li><a href="comic.html">漫画</a></li> -->
-                <li><a href="expression.html">动态表情</a></li>
-                <li class="hover"><a href="news.html">行业资讯</a></li>
-                <li><a href="aboutus.html">关于我们</a></li>
-            </ul>
-        </div>
-        <div class="login noLogin" style="display:none">           
-            <a class="loginout" href="./login.html">登录</a>/
-            <a class="loginout" href="./register.html">注册</a>
-        </div>
-        <div class="login showLogin" style="display:none">           
-            <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
-        </div>
+  .caselist {
+    position: relative;
+    overflow: hidden;
+    border: #C0E5F7 5px solid;
+    border-radius: 15px;
+  }
 
+  .tagImg1 {
+    position: absolute;
+  }
+
+  .tagDiv1 {
+    position: absolute;
+    z-index: 2;
+    top: 350px;
+  }
+
+  .war {
+    font-style: italic;
+    width: 25px;
+    height: 100px;
+    line-height: 25px;
+    font-size: 14px;
+    text-align: center;
+    color: black;
+    /*background-color: #9ad3f0;*/
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    border-radius: 5px;
+    letter-spacing: 2px;
+  }
+
+  .float_li {
+    position: relative;
+  }
+
+  .black_overlay {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 2000px;
+    background-color: black;
+    z-index: 1001;
+    -moz-opacity: 0.8;
+    opacity: .80;
+    filter: alpha(opacity=88);
+  }
+
+  .white_content {
+    display: none;
+    position: absolute;
+    border-radius: 10px;
+    top: 75%;
+    left: 35%;
+    width: 30%;
+    height: 50%;
+    padding: 40px;
+    background-color: white;
+    z-index: 1002;
+    overflow: auto;
+  }
+
+  .news-list {
+    width: 800px;
+    padding: 24px;
+    border: 1px solid #efefef;
+    margin: 20px auto;
+  }
+
+  .news-item {
+    padding: 8px 0;
+    line-height: 32px;
+    border-bottom: 1px solid #EEEEEE;
+  }
+
+  .news-item a {
+    display: block;
+  }
+
+  .news-item a:hover {
+    color: #359AD2;
+
+  }
+
+  .news-item p>i {
+    font-style: normal;
+    font-size: 12px;
+    color: #666666;
+  }
+
+  .news-item p>span {
+    float: right;
+  }
+
+  .amountLayer {
+    position: fixed;
+    z-index: 998;
+    background: #FFFFFF;
+    font-size: 15px;
+    text-align: center;
+    width: 400px;
+    height: 200px;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-200px) translateY(-100px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.16);
+    border-radius: 4px;
+    display: none;
+  }
+
+  .amountLayer span,
+  .amountTips {
+    color: #359AD2;
+  }
+
+  .loginTips,
+  .registerTips {
+    cursor: pointer;
+  }
+</style>
+
+<body>
+  <div class="header">
+    <div class="content">
+      <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+      <p class="prompt">&nbsp;&nbsp;</p>
+      <ul class="right">
+        <li><a href="index.html">首页</a></li>
+        <!-- <li><a href="comic.html">漫画</a></li> -->
+        <li><a href="expression.html">动态表情</a></li>
+        <li class="hover"><a href="news.html">行业资讯</a></li>
+        <li><a href="aboutus.html">关于我们</a></li>
+      </ul>
     </div>
-    <img src="./static/images/bg2.jpg" style="width:100%;" />
-    <div style="width:100%;background: #f9f9f9;overflow: hidden;">
-        <div class="only-expression news-list">
-        </div>
-        
+    <div class="login noLogin" style="display:none">
+      <a class="loginout" href="./login.html">登录</a>/
+      <a class="loginout" href="./register.html">注册</a>
     </div>
-    <div class="footer">
-        <div class="bottom"></div>
+    <div class="login showLogin" style="display:none">
+      <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
     </div>
-	<div class="amountLayer">
-		<div class="amountTips">
-			友情提醒：查看该信息需付费<span id="currentFee">2</span>元。
-		</div>
-		<div class="loginTips" onclick="goLogin()">
-			请<span>登录</span>支付。
-		</div>
-		<div class="registerTips" onclick="goRegister()">
-			如无会员账号，请点击<span>注册</span>。
-		</div>
-	</div>
-    <script src="./static/js/news.js?v=20190826"></script>
-    <script src="./static/js/common.js"></script>
-    <!-- <script src="./static/js/login.js"></script> -->
-    <!-- <div class="isLogin hidden">
+
+  </div>
+  <img src="./static/images/bg2.jpg" style="width:100%;" />
+  <div style="width:100%;background: #f9f9f9;overflow: hidden;">
+    <div class="only-expression news-list">
+    </div>
+
+  </div>
+  <div class="footer">
+    <div class="bottom"></div>
+  </div>
+  <div class="amountLayer">
+    <div class="amountTips">
+      友情提醒：查看该信息需付费<span id="currentFee">2</span>元。
+    </div>
+    <div class="loginTips" onclick="goLogin()">
+      请<span>登录</span>支付。
+    </div>
+    <div class="registerTips" onclick="goRegister()">
+      如无会员账号，请点击<span>注册</span>。
+    </div>
+  </div>
+  <script src="./static/js/news.js?v=20190826"></script>
+  <script src="./static/js/common.js"></script>
+  <!-- <script src="./static/js/login.js"></script> -->
+  <!-- <div class="isLogin hidden">
         <div class="close" id="closeLogin">X</div>
         <div class="com-login verify-form com-login-width rel"><h1 class="f32 mt30 pl12">您好，请登录</h1>
             <form method="post" class="mt30">
