--- a/aboutus.html
+++ b/aboutus.html
@@ -2,114 +2,115 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>峥嵘聚合_关于我们</title>
-	<meta name="keywords" content="免费阅读,钱塘阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版"> 
-	<meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学"> 
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"> 
-	<meta name="format-detection" content="telephone=no">
-    <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
-    <link href="./static/css/reset.css" rel="stylesheet">
-    <link href="./static/css/common.css" rel="stylesheet">
-    <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="./static/js/func.js"></script>
-    <style>
-        .main-container {
-            margin: 50px auto;
-            width: 1000px;
-            position: relative;
-        }
+  <meta charset="UTF-8">
+  <title>关于我们_牛角科技</title>
+  <meta name="keywords"
+    content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
+  <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
+  <link href="./static/css/reset.css" rel="stylesheet">
+  <link href="./static/css/common.css" rel="stylesheet">
+  <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="./static/js/func.js"></script>
+  <style>
+    .main-container {
+      margin: 50px auto;
+      width: 1000px;
+      position: relative;
+    }
 
-        .pl20 {
-            padding-left: 20px;
-        }
+    .pl20 {
+      padding-left: 20px;
+    }
 
-        .main-title {
-            font-size: 22px;
-            line-height: 40px;
-            font-weight: 600;
-        }
+    .main-title {
+      font-size: 22px;
+      line-height: 40px;
+      font-weight: 600;
+    }
 
-        .main-content {
-            font-size: 16px;
-            line-height: 30px;
-            padding-top: 10px;
-            text-indent: 2em;
-        }
+    .main-content {
+      font-size: 16px;
+      line-height: 30px;
+      padding-top: 10px;
+      text-indent: 2em;
+    }
 
-        .main-line {
-            font-size: 16px;
-            line-height: 30px;
-            padding-top: 10px;
-        }
+    .main-line {
+      font-size: 16px;
+      line-height: 30px;
+      padding-top: 10px;
+    }
 
-        .main-btn {
-            vertical-align: middle;
-            float: left;
-            margin: 10px;
-            background: red;
-            width: 80px;
-            height: 20px;
-            color: white;
-            line-height: 15px;
-            font-size: 14px;
-            padding: 5px;
-            text-align: center;
-            border-radius: 5px;
-        }
+    .main-btn {
+      vertical-align: middle;
+      float: left;
+      margin: 10px;
+      background: red;
+      width: 80px;
+      height: 20px;
+      color: white;
+      line-height: 15px;
+      font-size: 14px;
+      padding: 5px;
+      text-align: center;
+      border-radius: 5px;
+    }
 
-        .main-btn>a {
-            vertical-align: middle;
-            display: inline-block;
-        }
+    .main-btn>a {
+      vertical-align: middle;
+      display: inline-block;
+    }
 
-        .main-btn>a>img {
-            width: 15px;
-            height: 15px;
-        }
+    .main-btn>a>img {
+      width: 15px;
+      height: 15px;
+    }
 
-        .main-btn>a>span {
-            color: white;
-        }
-    </style>
+    .main-btn>a>span {
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="header">
-        <div class="content">
-            <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-            <p class="prompt">&nbsp;&nbsp;</p>
-            <ul class="right">
-                <li><a href="index.html">首页</a></li>
-                <!-- <li><a href="comic.html">漫画</a></li> -->
-                <li><a href="expression.html">动态表情</a></li>
-				<li><a href="news.html">行业资讯</a></li>
-                <li class="hover"><a href="aboutus.html">关于我们</a></li>
-            </ul>
-        </div>
-        <div class="login noLogin" style="display:none">           
-            <a class="loginout" href="./login.html">登录</a>/
-            <a class="loginout" href="./register.html">注册</a>
-        </div>
-        <div class="login showLogin" style="display:none">           
-            <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
-        </div>
+  <div class="header">
+    <div class="content">
+      <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+      <p class="prompt">&nbsp;&nbsp;</p>
+      <ul class="right">
+        <li><a href="index.html">首页</a></li>
+        <!-- <li><a href="comic.html">漫画</a></li> -->
+        <li><a href="expression.html">动态表情</a></li>
+        <li><a href="news.html">行业资讯</a></li>
+        <li class="hover"><a href="aboutus.html">关于我们</a></li>
+      </ul>
     </div>
-    <img src="./static/images/bg2.jpg" style="width:100%;" />
-    <div class="main-container">
-        <div class="pl20">
-            <div class="main-title">公司简介</div>
-            <div class="main-content">
-                北京峥嵘聚合科技有限公司经北京工商行政管理局批准于2017年7月注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
-            </div>
-            <div class="main-title">联系我们</div>
-            <div class="main-line">网站客服</div>
-            <div class="main-line">电话：010-57534275</div>
-            <div class="main-line">QQ ：398949820</div>
-            <div class="main-line">邮箱：398949820@qq.com</div>
-            <div class="main-line">地址：北京市朝阳区慧忠里103楼7层C座701</div>
-        </div>
-        <!-- <div style="position:absolute;top:270px;right:200px">
+    <div class="login noLogin" style="display:none">
+      <a class="loginout" href="./login.html">登录</a>/
+      <a class="loginout" href="./register.html">注册</a>
+    </div>
+    <div class="login showLogin" style="display:none">
+      <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
+    </div>
+  </div>
+  <img src="./static/images/bg2.jpg" style="width:100%;" />
+  <div class="main-container">
+    <div class="pl20">
+      <div class="main-title">公司简介</div>
+      <div class="main-content">
+        北京牛角科技有限公司经北京工商行政管理局批准于2020年8月注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
+      </div>
+      <div class="main-title">联系我们</div>
+      <div class="main-line">网站客服</div>
+      <div class="main-line">电话：010-58326589</div>
+      <div class="main-line">QQ ：398949820</div>
+      <div class="main-line">邮箱：398949820@qq.com</div>
+      <div class="main-line">地址：北京市朝阳区高碑店乡高碑店村民俗文化街1376号华膳园文化传媒产业园12号楼二层227室</div>
+    </div>
+    <!-- <div style="position:absolute;top:270px;right:200px">
             <div class="main-btn">
                 <a href="http://cdn.tiantianaikan.com/static/app/self003.apk">
                     <img src="./static/images/and.png">&nbsp<span>安卓下载</span></a>
@@ -120,11 +121,11 @@
             </div>
 
         </div> -->
-    </div>
-    <script src="./static/js/common.js"></script>
-    <!-- <script src="./static/js/login.js"></script> -->
+  </div>
+  <script src="./static/js/common.js"></script>
+  <!-- <script src="./static/js/login.js"></script> -->
 
-    <!-- <div class="isLogin hidden">
+  <!-- <div class="isLogin hidden">
         <div class="close" id="closeLogin">X</div>
         <div class="com-login verify-form com-login-width rel"><h1 class="f32 mt30 pl12">您好，请登录</h1>
             <form method="post" class="mt30">
