--- a/comic.html
+++ b/comic.html
@@ -2,236 +2,238 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>峥嵘聚合_漫画</title>
-	<meta name="keywords" content="免费阅读,钱塘阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版"> 
-	<meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学"> 
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"> 
-	<meta name="format-detection" content="telephone=no">
-    <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
-    <link href="./static/css/reset.css" rel="stylesheet">
-    <link href="./static/css/common.css" rel="stylesheet">
-    <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="./static/js/func.js"></script>
-    <style type="text/css">
-        html {
-            overflow-x: hidden;
-            overflow-y: auto;
-        }
+  <meta charset="UTF-8">
+  <title>漫画_牛角科技</title>
+  <meta name="keywords"
+    content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
+  <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
+  <link href="./static/css/reset.css" rel="stylesheet">
+  <link href="./static/css/common.css" rel="stylesheet">
+  <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="./static/js/func.js"></script>
+  <style type="text/css">
+    html {
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
 
-        #light {
-            display: none;
-            position: absolute;
-            border-radius: 10px;
-            top: 75%;
-            left: 35%;
-            width: 30%;
-            height: 50%;
-            padding: 40px;
-            background-color: white;
-            z-index: 1002;
-            overflow: auto;
-        }
+    #light {
+      display: none;
+      position: absolute;
+      border-radius: 10px;
+      top: 75%;
+      left: 35%;
+      width: 30%;
+      height: 50%;
+      padding: 40px;
+      background-color: white;
+      z-index: 1002;
+      overflow: auto;
+    }
 
-        #fade {
-            display: none;
-            position: absolute;
-            top: 0%;
-            left: 0%;
-            width: 100%;
-            height: 2000px;
-            background-color: black;
-            z-index: 1001;
-            -moz-opacity: 0.8;
-            opacity: .80;
-        }
-    </style>
+    #fade {
+      display: none;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 2000px;
+      background-color: black;
+      z-index: 1001;
+      -moz-opacity: 0.8;
+      opacity: .80;
+    }
+  </style>
 
-    <script language="javascript">
-        function ChangeAG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_11.html';
-        }
+  <script language="javascript">
+    function ChangeAG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_11.html';
+    }
 
-        function ChangeBG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_21.html';
-        }
+    function ChangeBG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_21.html';
+    }
 
-        function ChangeCG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_31.html';
-        }
+    function ChangeCG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_31.html';
+    }
 
-        function ChangeDG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_41.html';
-        }
+    function ChangeDG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_41.html';
+    }
 
-        function ChangeEG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_51.html';
-        }
+    function ChangeEG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_51.html';
+    }
 
-        function ChangeFG(i) {
-            console.log("jjj", $(this))
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            //	alert($(this).attr("src"));
-            document.getElementById("sp").src = './commic_files/dm_71.html';
-        }
+    function ChangeFG(i) {
+      console.log("jjj", $(this))
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      //	alert($(this).attr("src"));
+      document.getElementById("sp").src = './commic_files/dm_71.html';
+    }
 
-        function ChangeGG(i) {
-            $('.fg').attr("src", "./commic_files/logo.jpg");
-            $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
-            document.getElementById("sp").src = './commic_files/dm_61.html';
-        }
-    </script>
-    <!-- <script src="./commic_files/showwin.js.下载" type="text/javascript"></script> -->
+    function ChangeGG(i) {
+      $('.fg').attr("src", "./commic_files/logo.jpg");
+      $(".fg:eq(" + i + ")").attr("src", "./commic_files/logo1.png");
+      document.getElementById("sp").src = './commic_files/dm_61.html';
+    }
+  </script>
+  <!-- <script src="./commic_files/showwin.js.下载" type="text/javascript"></script> -->
 </head>
 
 <body onload="window.scrollTo((document.documentElement.scrollWidth-document.documentElement.offsetWidth)/2,0)">
-    <div class="header">
-        <div class="content">
-            <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-            <p class="prompt">&nbsp;&nbsp;</p>
-            <ul class="right">
-                <li><a href="index.html">首页</a></li>
-                <li class="hover"><a href="comic.html">漫画</a></li>
-                <li><a href="expression.html">动态表情</a></li>
-                <li><a href="aboutus.html">关于我们</a></li>
-            </ul>
-        </div>
+  <div class="header">
+    <div class="content">
+      <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+      <p class="prompt">&nbsp;&nbsp;</p>
+      <ul class="right">
+        <li><a href="index.html">首页</a></li>
+        <li class="hover"><a href="comic.html">漫画</a></li>
+        <li><a href="expression.html">动态表情</a></li>
+        <li><a href="aboutus.html">关于我们</a></li>
+      </ul>
     </div>
-    <img src="./static/images/bg2.jpg" style="width:100%;" />
-    <div style="width:100%;height:930px;background: #f9f9f9;">
-        <div style="width:915px;margin:0px auto;padding:24px;">
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/110.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/24.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/39.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/48.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/60.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/80.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/92.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-            <div class="float_li">
-                <a href="javascript:void(0)">
-                    <img src="./commic_files/110.gif" />
-                </a>
-                <span>
-                    <font color="red" style="float:left; text-align:left">8.8元/次</font>~
-                    <font style="float:right; text-align:right">
-                        <a href="javascript:void(0)">
-                            查看全部
-                        </a>
-                    </font>
-                </span>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="light" class="white_content">
-        <img style="margin-left: 20% " src="./static/images/ttak_index.png">
-        <br />
-        <a href="javascript:void(0)" onclick="document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">
-            <font color="red" style="margin-left: 40%">关闭窗口</font>
+  </div>
+  <img src="./static/images/bg2.jpg" style="width:100%;" />
+  <div style="width:100%;height:930px;background: #f9f9f9;">
+    <div style="width:915px;margin:0px auto;padding:24px;">
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/110.gif" />
         </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/24.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/39.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/48.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/60.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/80.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/92.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
+      <div class="float_li">
+        <a href="javascript:void(0)">
+          <img src="./commic_files/110.gif" />
+        </a>
+        <span>
+          <font color="red" style="float:left; text-align:left">8.8元/次</font>~
+          <font style="float:right; text-align:right">
+            <a href="javascript:void(0)">
+              查看全部
+            </a>
+          </font>
+        </span>
+      </div>
     </div>
-    <div id="fade" class="black_overlay"></div>
+  </div>
 
-    <div class="footer">
-        <div class="bottom"></div>
-    </div>
-    <script src="./static/js/common.js"></script>
+
+  <div id="light" class="white_content">
+    <img style="margin-left: 20% " src="./static/images/ttak_index.png">
+    <br />
+    <a href="javascript:void(0)"
+      onclick="document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">
+      <font color="red" style="margin-left: 40%">关闭窗口</font>
+    </a>
+  </div>
+  <div id="fade" class="black_overlay"></div>
+
+  <div class="footer">
+    <div class="bottom"></div>
+  </div>
+  <script src="./static/js/common.js"></script>
 </body>
 
 </html>
