--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>登录_峥嵘聚合</title>
+<title>登录_牛角科技</title>
 <meta http-equiv="Content-Disposition" content="attachment;">
 <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
 <link href="./static/css/reset.css" rel="stylesheet">
@@ -8,199 +8,199 @@
 <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="./static/js/func.js"></script>
 <style type="text/css">
-	html {
-		overflow-x: hidden;
-		overflow-y: auto;
-	}
+  html {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 
-	.login-wrapper {
-		text-align: center;
-		width: 1000px;
-		margin: auto;
-		padding-top: 40px;
-		padding-bottom: 100px;
-	}
+  .login-wrapper {
+    text-align: center;
+    width: 1000px;
+    margin: auto;
+    padding-top: 40px;
+    padding-bottom: 100px;
+  }
 
-	.login-box {
-		padding-top: 40px;
-		padding-bottom: 40px;
-		margin: auto;
-	}
+  .login-box {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin: auto;
+  }
 
-	.container {
-		text-align: center !important;
-	}
+  .container {
+    text-align: center !important;
+  }
 
-	.container,
-	.row {
-		position: relative;
-		margin: 0 auto;
-		width: 100%;
-	}
+  .container,
+  .row {
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+  }
 
-	.dds .title {
-		padding: 30px 0px;
-		margin-top: 0px;
-		font-size: 30px;
-		font-weight: bold;
-		/*letter-spacing: 5px;*/
-	}
+  .dds .title {
+    padding: 30px 0px;
+    margin-top: 0px;
+    font-size: 30px;
+    font-weight: bold;
+    /*letter-spacing: 5px;*/
+  }
 
-	.form-group {
-		margin-right: -15px;
-		margin-left: -15px;
-		margin: 20px;
-	}
+  .form-group {
+    margin-right: -15px;
+    margin-left: -15px;
+    margin: 20px;
+  }
 
-	.btn {
-		width: 200px;
-		background-color: #eee;
-		color: white;
-		border: 1px solid #666;
-		border-radius: 4px;
-		font-size: 18px;
-		outline: none;
-		cursor: pointer;
-		/*font-weight: bold;*/
-		background: #359AD2;
-	}
+  .btn {
+    width: 200px;
+    background-color: #eee;
+    color: white;
+    border: 1px solid #666;
+    border-radius: 4px;
+    font-size: 18px;
+    outline: none;
+    cursor: pointer;
+    /*font-weight: bold;*/
+    background: #359AD2;
+  }
 
-	.control-label {
-		font-size: 20px;
-		font-weight: bold;
-		margin-right: 10px;
-	}
+  .control-label {
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
 
-	.form-control {
-		display: inline-block;
-		padding: 6px 12px;
-		color: #555;
-		border: 1px solid #ccc;
-		width: 250px;
-	}
+  .form-control {
+    display: inline-block;
+    padding: 6px 12px;
+    color: #555;
+    border: 1px solid #ccc;
+    width: 250px;
+  }
 
-	.regnow {
-		color: cadetblue !important;
-	}
+  .regnow {
+    color: cadetblue !important;
+  }
 </style>
 
 </head>
 
 <body>
-	<div class="header">
-		<div class="content">
-			<a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-			<p class="prompt">&nbsp;&nbsp;</p>
-			<ul class="right">
-				<li><a href="index.html">首页</a></li>
-				<!-- <li><a href="commic.html" >漫画</a></li> -->
-				<li><a href="expression.html">动态表情</a></li>
-				<li><a href="news.html">行业资讯</a></li>
-				<li><a href="aboutus.html">关于我们</a></li>
-			</ul>
+  <div class="header">
+    <div class="content">
+      <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+      <p class="prompt">&nbsp;&nbsp;</p>
+      <ul class="right">
+        <li><a href="index.html">首页</a></li>
+        <!-- <li><a href="commic.html" >漫画</a></li> -->
+        <li><a href="expression.html">动态表情</a></li>
+        <li><a href="news.html">行业资讯</a></li>
+        <li><a href="aboutus.html">关于我们</a></li>
+      </ul>
 
-		</div>
-		<div class="login noLogin" style="display:none">
-			<a class="loginout" href="./login.html">登录</a>/
-			<a class="loginout" href="./register.html">注册</a>
-		</div>
-		<div class="login showLogin" style="display:none">
-			<a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
-		</div>
-		<!--<div style="clear: both;"></div>-->
+    </div>
+    <div class="login noLogin" style="display:none">
+      <a class="loginout" href="./login.html">登录</a>/
+      <a class="loginout" href="./register.html">注册</a>
+    </div>
+    <div class="login showLogin" style="display:none">
+      <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
+    </div>
+    <!--<div style="clear: both;"></div>-->
 
-	</div>
-	<img src="./static/images/bg2.jpg" style="width:100%;" />
-	<section class="dds">
-		<div class="login-wrapper">
-			<div class="login-box">
-				<div class="container">
-					<div class="col-md-6">
-						<div class="login-from signin-from">
-							<h2 class="title c-blue">账户登录</h2>
-							<script type="text/javascript">
-								var apihost = 'http://47.110.243.66:8082/ucenter/api/zrjh/';
+  </div>
+  <img src="./static/images/bg2.jpg" style="width:100%;" />
+  <section class="dds">
+    <div class="login-wrapper">
+      <div class="login-box">
+        <div class="container">
+          <div class="col-md-6">
+            <div class="login-from signin-from">
+              <h2 class="title c-blue">账户登录</h2>
+              <script type="text/javascript">
+                var apihost = 'http://47.110.243.66:8082/ucenter/api/zrjh/';
 
-								// localStorage.removeItem('users');
-								function myCheck(e) {
-									for (var i = 0; i < document.form1.elements.length - 1; i++) {
-										if (document.form1.elements[i].value == "") {
-											alert("账号或密码不能有空");
-											document.form1.elements[i].focus();
-											return false;
-										}
-										if (document.form1.user_password.value.length < 6) {
-											alert("密码不可以小于6");
-											document.form1.elements[i].focus();
-											return false;
-										}
+                // localStorage.removeItem('users');
+                function myCheck(e) {
+                  for (var i = 0; i < document.form1.elements.length - 1; i++) {
+                    if (document.form1.elements[i].value == "") {
+                      alert("账号或密码不能有空");
+                      document.form1.elements[i].focus();
+                      return false;
+                    }
+                    if (document.form1.user_password.value.length < 6) {
+                      alert("密码不可以小于6");
+                      document.form1.elements[i].focus();
+                      return false;
+                    }
 
-										if (document.form1.user_password.value.length > 20) {
-											alert("密码不可以大于20");
-											document.form1.elements[i].focus();
-											return false;
-										}
-									}
-									var username = document.form1.user_name.value;
-									var pwd = document.form1.user_password.value;
-									$.ajax({
-										url: apihost + "login",
-										type: "GET",
-										dataType: "json",
-										data: "phone_num=" + username + "&password=" + pwd,
-										success: function(res) {
-											if (res.status == 0) {
-												alert("登录成功！");
-												localStorage.setItem('username', username);
-												localStorage.setItem('isLogin', 1);
-												window.location.href = "./index.html";
-											} else {
-												alert(res.msg);
-											}
+                    if (document.form1.user_password.value.length > 20) {
+                      alert("密码不可以大于20");
+                      document.form1.elements[i].focus();
+                      return false;
+                    }
+                  }
+                  var username = document.form1.user_name.value;
+                  var pwd = document.form1.user_password.value;
+                  $.ajax({
+                    url: apihost + "login",
+                    type: "GET",
+                    dataType: "json",
+                    data: "phone_num=" + username + "&password=" + pwd,
+                    success: function (res) {
+                      if (res.status == 0) {
+                        alert("登录成功！");
+                        localStorage.setItem('username', username);
+                        localStorage.setItem('isLogin', 1);
+                        window.location.href = "./index.html";
+                      } else {
+                        alert(res.msg);
+                      }
 
-										}
-									})
-								}
-							</script>
-							<form class="form-horizontal" name="form1" action="#" method="post" onsubmit="return myCheck(event)">
-								<div class="form-group">
-									<label for="inputEmail3" class="col-sm-2 control-label">账号:</label>
-									<input class="form-control" name="user_name" placeholder="用户名(注册的手机号)" type="text">
-								</div>
-								<div class="form-group">
-									<label for="inputPassword3" class="col-sm-2 control-label">密码:</label>
-									<input class="form-control" name="user_password" placeholder="请输入密码" type="password">
-								</div>
-								<div class="form-group">
-									<div class="col-sm-offset-2 col-sm-10">
-										<div class="checkbox">
-											<label class="auto-login c-blue">
-												<input type="checkbox"> 下次自动登录
-											</label>
-										</div>
-									</div>
-								</div>
-								<div class="form-group">
-									<button type="button" onclick="myCheck(event)" class="btn">登录</button>
-								</div>
-							</form>
-							<div class="login-other">
-								<div class="col-sm-offset-2 col-sm-10">
-									<p class="nomumu c-blue">还没有账号：
-										<a href="./register.html" class="regnow">立即注册</a>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<div class="footer">
-		<div class="bottom"></div>
-	</div>
-	<script src="./static/js/common.js"></script>
+                    }
+                  })
+                }
+              </script>
+              <form class="form-horizontal" name="form1" action="#" method="post" onsubmit="return myCheck(event)">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-2 control-label">账号:</label>
+                  <input class="form-control" name="user_name" placeholder="用户名(注册的手机号)" type="text">
+                </div>
+                <div class="form-group">
+                  <label for="inputPassword3" class="col-sm-2 control-label">密码:</label>
+                  <input class="form-control" name="user_password" placeholder="请输入密码" type="password">
+                </div>
+                <div class="form-group">
+                  <div class="col-sm-offset-2 col-sm-10">
+                    <div class="checkbox">
+                      <label class="auto-login c-blue">
+                        <input type="checkbox"> 下次自动登录
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <button type="button" onclick="myCheck(event)" class="btn">登录</button>
+                </div>
+              </form>
+              <div class="login-other">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <p class="nomumu c-blue">还没有账号：
+                    <a href="./register.html" class="regnow">立即注册</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="footer">
+    <div class="bottom"></div>
+  </div>
+  <script src="./static/js/common.js"></script>
 
 </body>
 
