--- a/register.html
+++ b/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>注册_峥嵘聚合</title>
+<title>注册_牛角科技</title>
 <meta http-equiv="Content-Disposition" content="attachment;">
 <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
 <link href="./static/css/reset.css" rel="stylesheet">
@@ -8,65 +8,65 @@
 <script type="text/javascript" src="./static/js/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="./static/js/func.js"></script>
 <style type="text/css">
-	html {
-		overflow-x: hidden;
-		overflow-y: auto;
-	}
+  html {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 
-	.dds {
-		margin: 50px;
-	}
+  .dds {
+    margin: 50px;
+  }
 
-	.register-wrapper {
-		text-align: center;
-		margin: auto;
-	}
+  .register-wrapper {
+    text-align: center;
+    margin: auto;
+  }
 
-	.control-label {
-		font-size: 20px;
-		font-weight: bold;
-		margin-right: 10px;
-	}
+  .control-label {
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
 
-	.form-group {
-		margin-right: -15px;
-		margin-left: -15px;
-		margin: 20px;
-	}
+  .form-group {
+    margin-right: -15px;
+    margin-left: -15px;
+    margin: 20px;
+  }
 
-	.form-control {
-		display: inline-block;
-		padding: 6px 12px;
-		color: #555;
-		border: 1px solid #ccc;
-		width: 250px;
-	}
+  .form-control {
+    display: inline-block;
+    padding: 6px 12px;
+    color: #555;
+    border: 1px solid #ccc;
+    width: 250px;
+  }
 
-	.regnow {
-		color: cadetblue !important;
-	}
+  .regnow {
+    color: cadetblue !important;
+  }
 
-	.btn {
-		width: 200px;
-		background-color: #eee;
-		color: white;
-		border: 1px solid #666;
-		border-radius: 4px;
-		font-size: 18px;
-		outline: none;
-		cursor: pointer;
-		/*font-weight: bold;*/
-		background: #359AD2;
-	}
+  .btn {
+    width: 200px;
+    background-color: #eee;
+    color: white;
+    border: 1px solid #666;
+    border-radius: 4px;
+    font-size: 18px;
+    outline: none;
+    cursor: pointer;
+    /*font-weight: bold;*/
+    background: #359AD2;
+  }
 
-	#code_show {
-		font-family: Arial;
-		font-style: italic;
-		font-weight: bold;
-		border: 0;
-		letter-spacing: 2px;
-		color: blue;
-	}
+  #code_show {
+    font-family: Arial;
+    font-style: italic;
+    font-weight: bold;
+    border: 0;
+    letter-spacing: 2px;
+    color: blue;
+  }
 </style>
 <script type="text/javascript">
 
@@ -75,105 +75,109 @@
 </head>
 
 <body>
-	<div class="header">
-		<div class="content">
-			<a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
-			<p class="prompt">&nbsp;&nbsp;</p>
-			<ul class="right">
-				<li><a href="index.html">首页</a></li>
-				<!-- <li><a href="commic.html">漫画</a></li> -->
-				<li><a href="expression.html">动态表情</a></li>
-				<li><a href="news.html">行业资讯</a></li>
-				<li><a href="aboutus.html">关于我们</a></li>
-			</ul>
-		</div>
-		<div class="login noLogin" style="display:none">
-			<a class="loginout" href="./login.html">登录</a>/
-			<a class="loginout" href="./register.html">注册</a>
-		</div>
-		<div class="login showLogin" style="display:none">
-			<a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
-		</div>
-		<!--<div style="clear: both;"></div>-->
+  <div class="header">
+    <div class="content">
+      <a href="index.html"><img src="./static/images/logo.png" alt="" class="logo"></a>
+      <p class="prompt">&nbsp;&nbsp;</p>
+      <ul class="right">
+        <li><a href="index.html">首页</a></li>
+        <!-- <li><a href="commic.html">漫画</a></li> -->
+        <li><a href="expression.html">动态表情</a></li>
+        <li><a href="news.html">行业资讯</a></li>
+        <li><a href="aboutus.html">关于我们</a></li>
+      </ul>
+    </div>
+    <div class="login noLogin" style="display:none">
+      <a class="loginout" href="./login.html">登录</a>/
+      <a class="loginout" href="./register.html">注册</a>
+    </div>
+    <div class="login showLogin" style="display:none">
+      <a class="loginout" onclick="quitLogin()" href="javascript:;">退出登录</a>
+    </div>
+    <!--<div style="clear: both;"></div>-->
 
-	</div>
-	<img src="./static/images/bg2.jpg" style="width:100%;" />
-	<section class="dds">
-		<div class="register-wrapper">
-			<div class="register-box">
-				<div class="container">
-					<div class="col-md-7">
-						<div class="login-from reg-from">
-							<h2 class="title c-blue">用户注册</h2>
-							<form class="form-horizontal" name="form1" action="" method="post" onsubmit="return myCheck(event)">
+  </div>
+  <img src="./static/images/bg2.jpg" style="width:100%;" />
+  <section class="dds">
+    <div class="register-wrapper">
+      <div class="register-box">
+        <div class="container">
+          <div class="col-md-7">
+            <div class="login-from reg-from">
+              <h2 class="title c-blue">用户注册</h2>
+              <form class="form-horizontal" name="form1" action="" method="post" onsubmit="return myCheck(event)">
 
-								<!-- <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="inputEmail3" class="col-sm-4 control-label">用户账号：</label>
                       <input type="text" class="form-control"  id="txtUserName" name="username" placeholder="支持6-15位字母、数字">
                       <span class="star" style="color:red;">*</span>
                   </div> -->
-								<div class="form-group">
-									<label for="inputPassword3" class="col-sm-4 control-label">用户账号：</label>
-									<input class="form-control" name="user_mobile" id="phone" placeholder="请输入11位数字的手机号码" type="text">
-									<span class="star" style="color:red">*</span>
-								</div>
-								<!-- <div class="form-group">
+                <div class="form-group">
+                  <label for="inputPassword3" class="col-sm-4 control-label">用户账号：</label>
+                  <input class="form-control" name="user_mobile" id="phone" placeholder="请输入11位数字的手机号码" type="text">
+                  <span class="star" style="color:red">*</span>
+                </div>
+                <!-- <div class="form-group">
                     <label for="inputPassword3" class="col-sm-4 control-label">真实姓名：</label>
                       <input class="form-control" name="user_zname" id="txtUserZName" placeholder="真实姓名，如“张三”" type="text">
                       <span class="star" style="color:red">*</span>
                   </div> -->
-								<!-- <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="inputPassword3" class="col-sm-4 control-label">身份证号：</label>
                       <input class="form-control" name="id_card" id="txtcard" placeholder="真实的身份证号码" type="text">
                       <span  class="star" style="color:red">*</span>
                   </div> -->
-								<div class="form-group">
-									<label for="inputPassword3" class="col-sm-4 control-label">登录密码：</label>
-									<input type="password" class="form-control" name="password" id="txtPassword" placeholder="支持6-20位字母、数字">
-									<span class="star" style="color:red">*</span>
-								</div>
-								<div class="form-group">
-									<label for="inputPassword3" class="col-sm-4 control-label">确认密码：</label>
-									<input type="password" class="form-control" name="repeatPass" id="txtRepeatPass" placeholder="请再次输入密码">
-									<span class="star" style="color:red">*</span>
-								</div>
+                <div class="form-group">
+                  <label for="inputPassword3" class="col-sm-4 control-label">登录密码：</label>
+                  <input type="password" class="form-control" name="password" id="txtPassword"
+                    placeholder="支持6-20位字母、数字">
+                  <span class="star" style="color:red">*</span>
+                </div>
+                <div class="form-group">
+                  <label for="inputPassword3" class="col-sm-4 control-label">确认密码：</label>
+                  <input type="password" class="form-control" name="repeatPass" id="txtRepeatPass"
+                    placeholder="请再次输入密码">
+                  <span class="star" style="color:red">*</span>
+                </div>
 
-								<!-- <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="inputPassword3" class="col-sm-4 control-label">注册邮箱：</label>
                       <input class="form-control" name="user_mail" id="user_mail" placeholder="用户邮箱" type="text">
                       <span class="star" style="color:red">*</span>
                   </div> -->
-								<div class="form-group">
-									<label for="inputPassword3" class="col-sm-4 control-label" style="margin-left: 60px;">验证码&nbsp;&nbsp;：</label>
-									<input class="form-control" name="user_code" id="user_code" placeholder="验证码" type="text"><span class="star"
-									 style="color:red;margin-left:5px;">*</span>
-									<!-- <input type="button" id="btn_mail" value="发送验证码到邮箱" onclick="sendemail()" /> <span class="star" style="color:red">*</span> -->
-									<input type="button" id="code_show" value="" onclick="createCode()" />
-								</div>
-						</div>
-						<div class="form-group">
-							<label for="inputPassword3" class="col-sm-4 control-label"></label>
-							<label>
-								<input type="checkbox" checked>我已阅读并完全接受<a href="./agreement.html" style="color: blue;">《用户服务协议》</a>
-							</label>
-						</div>
-						<div class="form-group">
-							<div class="col-sm-offset-4 col-sm-6">
-								<button type="button" onclick="myCheck(event);" class="btn btn-signin btn-block" style="width:116px;color:#FFF;">立即注册</button>
-							</div>
-						</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-		</div>
-	</section>
-	<div class="footer">
-		<div class="bottom"></div>
-	</div>
-	<script src="./static/js/common.js"></script>
-	<script src="./static/js/register.js"></script>
+                <div class="form-group">
+                  <label for="inputPassword3" class="col-sm-4 control-label"
+                    style="margin-left: 60px;">验证码&nbsp;&nbsp;：</label>
+                  <input class="form-control" name="user_code" id="user_code" placeholder="验证码" type="text"><span
+                    class="star" style="color:red;margin-left:5px;">*</span>
+                  <!-- <input type="button" id="btn_mail" value="发送验证码到邮箱" onclick="sendemail()" /> <span class="star" style="color:red">*</span> -->
+                  <input type="button" id="code_show" value="" onclick="createCode()" />
+                </div>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword3" class="col-sm-4 control-label"></label>
+              <label>
+                <input type="checkbox" checked>我已阅读并完全接受<a href="./agreement.html" style="color: blue;">《用户服务协议》</a>
+              </label>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-4 col-sm-6">
+                <button type="button" onclick="myCheck(event);" class="btn btn-signin btn-block"
+                  style="width:116px;color:#FFF;">立即注册</button>
+              </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <div class="footer">
+    <div class="bottom"></div>
+  </div>
+  <script src="./static/js/common.js"></script>
+  <script src="./static/js/register.js"></script>
 
 
 </body>
