--- a/expression.html
+++ b/expression.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>动态表情_牛角科技</title>
+  <title>动态表情_三五更</title>
   <meta name="keywords"
     content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
   <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
@@ -127,7 +127,7 @@
   <div class="footer">
     <div class="bottom"></div>
   </div>
-  <script src="./static/js/expression.js?v=20190228"></script>
+  <script src="./static/js/expression.js?v=20210531"></script>
   <script src="./static/js/common.js"></script>
   <!-- <script src="./static/js/login.js"></script> -->
   <!-- <div class="isLogin hidden">
