--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>关于我们_牛角科技</title>
+  <title>关于我们_北京三五更文化传媒有限公司</title>
   <meta name="keywords"
     content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
   <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
@@ -83,7 +83,7 @@
       <ul class="right">
         <li><a href="index.html">首页</a></li>
         <!-- <li><a href="comic.html">漫画</a></li> -->
-        <li><a href="expression.html">动态表情</a></li>
+        <!-- <li><a href="expression.html">动态表情</a></li> -->
         <li><a href="news.html">行业资讯</a></li>
         <li class="hover"><a href="aboutus.html">关于我们</a></li>
       </ul>
@@ -101,14 +101,14 @@
     <div class="pl20">
       <div class="main-title">公司简介</div>
       <div class="main-content">
-        北京牛角科技有限公司经北京工商行政管理局批准于2020年注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
+        北京三五更文化传媒有限公司经北京工商行政管理局批准于2021年注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
       </div>
       <div class="main-title">联系我们</div>
       <div class="main-line">网站客服</div>
       <div class="main-line">电话：18612149479</div>
       <div class="main-line">QQ ：398949820</div>
       <div class="main-line">邮箱：398949820@qq.com</div>
-      <div class="main-line">地址：北京市朝阳区高碑店乡高碑店村民俗文化街1376号华膳园文化传媒产业园12号楼二层227室</div>
+      <div class="main-line">地址：北京市丰台区航丰路8号院1号楼6层627室</div>
     </div>
     <!-- <div style="position:absolute;top:270px;right:200px">
             <div class="main-btn">
