--- a/agreement.html
+++ b/agreement.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>用户服务协议_牛角科技</title>
+<title>用户服务协议_三五更</title>
 <!-- <script type="text/javascript" src="http://j.gamersky.com/g/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="static/js/func.js"></script>
 <link href="static/css/index.css" rel="stylesheet">
@@ -61,7 +61,7 @@
             <ul class="right">
                 <li><a href="index.html">首页</a></li>
                 <!-- <li><a href="commic.html">漫画</a></li> -->
-                <li><a href="expression.html">动态表情</a></li>
+                <!-- <li><a href="expression.html">动态表情</a></li> -->
 				<li><a href="news.html">行业资讯</a></li>
                 <li><a href="aboutus.html">关于我们</a></li>
             </ul>
@@ -83,92 +83,92 @@
             <div class="agreement-content">
                 <div><span><br></span></div>
                 <div><span>1</span><span>．释本<span><br />
-                        </span>服务协议是用户与北京牛角科技有限公司（以下简称<span>"</span>牛角科技<span>"</span>）之间的法律协议（包括但不仅限于所订立的相关权利义务规范）。<span><br>
-                        </span>用户指愿意接受本协议，注册成为<span>"</span>牛角科技原创漫画发行平台网站<span>"</span>用户并使用<span>"</span>牛角科技原创漫画发行平台网站<span>"</span>提供的网络服务的个人。<span><br>
-                        </span>此份协议描述牛角科技向用户提供网络服务的详细条款。因此，请于注册成为牛角科技的用户前，确实、详细地阅读本服务协议的所有内容。当用户点选<span>"</span>同意<span>"</span>按钮或使用任何牛角科技所提供的网络服务即视为同意并接受本服务协议的所有规范并愿受其约束。<span><br>
+                        </span>服务协议是用户与北京三五更文化传媒有限公司（以下简称<span>"</span>三五更<span>"</span>）之间的法律协议（包括但不仅限于所订立的相关权利义务规范）。<span><br>
+                        </span>用户指愿意接受本协议，注册成为<span>"</span>三五更原创漫画发行平台网站<span>"</span>用户并使用<span>"</span>三五更原创漫画发行平台网站<span>"</span>提供的网络服务的个人。<span><br>
+                        </span>此份协议描述三五更向用户提供网络服务的详细条款。因此，请于注册成为三五更的用户前，确实、详细地阅读本服务协议的所有内容。当用户点选<span>"</span>同意<span>"</span>按钮或使用任何三五更所提供的网络服务即视为同意并接受本服务协议的所有规范并愿受其约束。<span><br>
                         </span>用户应当明确：无论事实上是否在注册前认真阅读，只要用户点击<span>"</span>同意<span>"</span>按钮并按照相关注册程序成功注册，用户的行为就已表示用户无条件接受了本协议及本公司所公布的各项管理规定，并愿意受其约束。如果发生纠纷，用户不得以未仔细阅读为由实行抗辩。<span><br>
-                        </span>另外提醒用户，本协议之规定可能随时会更改，修改本用户协议时，牛角科技将于相关页面公告修改的事实，而不另行对用户进行个别通知，敬请定期查询。如用户不同意本服务协议及<span>/</span>或随时对其的修改，用户可以主动取消牛角科技提供的服务，用户如果仍继续使用牛角科技提供的服务即视为用户同意牛角科技对本协议所做的所有更新内容。由于用户在用户协议变更后因未熟悉公告规定而引起的损失<span>,</span>牛角科技将不会承担任何责任。<span><br>
+                        </span>另外提醒用户，本协议之规定可能随时会更改，修改本用户协议时，三五更将于相关页面公告修改的事实，而不另行对用户进行个别通知，敬请定期查询。如用户不同意本服务协议及<span>/</span>或随时对其的修改，用户可以主动取消三五更提供的服务，用户如果仍继续使用三五更提供的服务即视为用户同意三五更对本协议所做的所有更新内容。由于用户在用户协议变更后因未熟悉公告规定而引起的损失<span>,</span>三五更将不会承担任何责任。<span><br>
                             2</span>．服务内容<span><br>
-                        </span>牛角科技服务的具体内容由牛角科技根据实际情况提供，例如牛角科技平台上传漫画、牛角科技社区论坛等。<span><br>
-                        </span>牛角科技保留随时变更、中断或终止部分或全部网络服务的权利。<span><br>
+                        </span>三五更服务的具体内容由三五更根据实际情况提供，例如三五更平台上传漫画、三五更社区论坛等。<span><br>
+                        </span>三五更保留随时变更、中断或终止部分或全部网络服务的权利。<span><br>
                         </span>若父母（监护人）希望未成年人（尤其是十岁以下子女）得以使用本服务，必须以父母（监护人）名义申请注册，在接受本服务时，应以法定监护人身份加以判断本服务是否符合于未成年人。<span><br>
                             3.</span>著作权声明<span><br>
-                        </span>牛角科技所提供的服务与服务有关的全部信息、资料、文字、软件、声音、图片、视频、图表（包括相关的软件）的著作权、商标、商业秘密、其他知识产权、所有权或其他权利，均为牛角科技或其权利人所有，受中华人民共和国相关法律及中华人民共和国加入的国际协定和国际条约保护，除非事先获得牛角科技或其权利人的合法授权，用户不得对任何该信息、资料、文字、软件、声音、图片、视频、图表进行修改或销售。如用户未遵守本条款的上述规定，在不损害其他权利的情况下，牛角科技可立即终止向用户提供服务，用户必须销毁任何已经获得的上述信息、资料、文字、软件、声音、图片、视频、图表。<span><br>
-                            4.</span>资费政策<br />牛角科技在提供网络服务时，可能会对部分网络服务<span>(</span>例如<span>VIP</span>作品阅读<span>)</span>的用户收取一定的费用。在此情况下，牛角科技会在相关页面上做明确的提示。如用户拒绝支付该等费用，则不能使用相关的网络服务。<span><br>
-                        </span>对于牛角科技的收费服务，用户应该按照牛角科技确定的资费政策购买牛角科技的服务；否则，牛角科技可以立即停止向用户提供该服务。<span><br>
-                        </span>牛角科技将有权决定牛角科技所提供的服务的资费标准和收费方式，牛角科技可能会就不同的服务制定不同的资费标准和收费方式，也可能按照牛角科技所提供的服务的不同阶段确定不同的资费标准和收费方式；另外，牛角科技也可能不时地修改牛角科技的资费政策。牛角科技会将有关服务的资费标准、收费方式、购买方式或其他有关资费政策的信息放置在该服务相关网页的显著位置。<span><br>
-                        </span>用户使用牛角科技提供的互联网应用、内容或服务并依据牛角科技的资费标准和收费方式支付费用后，如依据国家法律、行政法规或牛角科技资费政策的规定，可以申请退款的，则用户有权在退款事由发生时，通过<a
-                            name="_GoBack"></a>联系在线客服或拨打客服电话，向牛角科技申请退款。牛角科技将在核实退款事由后，在<span>15</span>个工作日内以<span>"</span>原路返回<span>"</span>的方式将退款退回到用户的付款来源（包括但不限于支付宝帐户、银行或是牛角科技账户等来源）。<span><br>
-                        </span>通过网银或支付宝等第三方支付平台进行支付的费用将直接退到原付款账户，使用牛角科技账户支付的部分将直接退至牛角科技账户。<span><br>
+                        </span>三五更所提供的服务与服务有关的全部信息、资料、文字、软件、声音、图片、视频、图表（包括相关的软件）的著作权、商标、商业秘密、其他知识产权、所有权或其他权利，均为三五更或其权利人所有，受中华人民共和国相关法律及中华人民共和国加入的国际协定和国际条约保护，除非事先获得三五更或其权利人的合法授权，用户不得对任何该信息、资料、文字、软件、声音、图片、视频、图表进行修改或销售。如用户未遵守本条款的上述规定，在不损害其他权利的情况下，三五更可立即终止向用户提供服务，用户必须销毁任何已经获得的上述信息、资料、文字、软件、声音、图片、视频、图表。<span><br>
+                            4.</span>资费政策<br />三五更在提供网络服务时，可能会对部分网络服务<span>(</span>例如<span>VIP</span>作品阅读<span>)</span>的用户收取一定的费用。在此情况下，三五更会在相关页面上做明确的提示。如用户拒绝支付该等费用，则不能使用相关的网络服务。<span><br>
+                        </span>对于三五更的收费服务，用户应该按照三五更确定的资费政策购买三五更的服务；否则，三五更可以立即停止向用户提供该服务。<span><br>
+                        </span>三五更将有权决定三五更所提供的服务的资费标准和收费方式，三五更可能会就不同的服务制定不同的资费标准和收费方式，也可能按照三五更所提供的服务的不同阶段确定不同的资费标准和收费方式；另外，三五更也可能不时地修改三五更的资费政策。三五更会将有关服务的资费标准、收费方式、购买方式或其他有关资费政策的信息放置在该服务相关网页的显著位置。<span><br>
+                        </span>用户使用三五更提供的互联网应用、内容或服务并依据三五更的资费标准和收费方式支付费用后，如依据国家法律、行政法规或三五更资费政策的规定，可以申请退款的，则用户有权在退款事由发生时，通过<a
+                            name="_GoBack"></a>联系在线客服或拨打客服电话，向三五更申请退款。三五更将在核实退款事由后，在<span>15</span>个工作日内以<span>"</span>原路返回<span>"</span>的方式将退款退回到用户的付款来源（包括但不限于支付宝帐户、银行或是三五更账户等来源）。<span><br>
+                        </span>通过网银或支付宝等第三方支付平台进行支付的费用将直接退到原付款账户，使用三五更账户支付的部分将直接退至三五更账户。<span><br>
                             5</span>．账号和密码<span><br>
-                        </span>用户申请注册成功后，牛角科技将分配给用户牛角科技的账号。用户了解账号一旦设定，就不可再为变更；而密码则可以在牛角科技的网页上进行变更。<span><br>
-                        </span>为维护自身权益，用户不应将账号及密码泄漏或提供第三人知悉或出借或转让与他人使用，如因用户自身过错或过失而导致账号或密码泄漏而给用户自身造成损失，用户应自行承担责任。牛角科技员工（包括但不限于我们的网站和论坛管理人员、客服人员等）不会以任何方式询问用户的密码，所以用户不得对任何人泄漏用户的密码，不要多人共享同一个账号，不安装非法或来路不明的程序。如果用户遗失了密码，牛角科技针对处理此问题之服务保留索取额外费用的权利。<span><br>
-                        </span>若用户发现账号或密码遭他人非法使用或有异常使用的情形，应立即通知牛角科技，并提交该账号为本人所有的有关证明，以便申请该账号的暂停使用，因此而造成的损失，牛角科技不承担赔偿责任。但在用户根据法律规定申请立案的情况下，牛角科技有义务协助查询。<span><br>
+                        </span>用户申请注册成功后，三五更将分配给用户三五更的账号。用户了解账号一旦设定，就不可再为变更；而密码则可以在三五更的网页上进行变更。<span><br>
+                        </span>为维护自身权益，用户不应将账号及密码泄漏或提供第三人知悉或出借或转让与他人使用，如因用户自身过错或过失而导致账号或密码泄漏而给用户自身造成损失，用户应自行承担责任。三五更员工（包括但不限于我们的网站和论坛管理人员、客服人员等）不会以任何方式询问用户的密码，所以用户不得对任何人泄漏用户的密码，不要多人共享同一个账号，不安装非法或来路不明的程序。如果用户遗失了密码，三五更针对处理此问题之服务保留索取额外费用的权利。<span><br>
+                        </span>若用户发现账号或密码遭他人非法使用或有异常使用的情形，应立即通知三五更，并提交该账号为本人所有的有关证明，以便申请该账号的暂停使用，因此而造成的损失，三五更不承担赔偿责任。但在用户根据法律规定申请立案的情况下，三五更有义务协助查询。<span><br>
                             6.</span>用户的权利<span><br>
-                        </span>用户可以根据本协议以及牛角科技平台不时更新和公布的其他规则使用牛角科技提供的服务。<span><br>
-                        </span>用户有权在使用牛角科技提供的服务的期间监督牛角科技及牛角科技的工作人员是否按照牛角科技所公布的标准向用户提供服务，也可以随时向牛角科技提出与牛角科技的服务有关意见和建议。<span><br>
-                        </span>如果用户不同意本协议或对牛角科技后来更新的协议有异议，或对牛角科技所提供服务不满意，用户可以选择停止使用牛角科技的服务。如果用户选择停止使用牛角科技的服务，则牛角科技即不再对用户承担任何义务和责任。<span><br>
+                        </span>用户可以根据本协议以及三五更平台不时更新和公布的其他规则使用三五更提供的服务。<span><br>
+                        </span>用户有权在使用三五更提供的服务的期间监督三五更及三五更的工作人员是否按照三五更所公布的标准向用户提供服务，也可以随时向三五更提出与三五更的服务有关意见和建议。<span><br>
+                        </span>如果用户不同意本协议或对三五更后来更新的协议有异议，或对三五更所提供服务不满意，用户可以选择停止使用三五更的服务。如果用户选择停止使用三五更的服务，则三五更即不再对用户承担任何义务和责任。<span><br>
                             7</span>．用户的义务<span><br>
                         </span>用户需自行配备注册和使用网络所需的各项计算机及网络设备，并自行负担上网所需的各项费用。<span><br>
-                        </span>牛角科技向用户提供的网络服务本身属于商业行为，用户需要支付相应的费用。<span><br>
-                        </span>用户有义务妥善保管使用牛角科技的账号及密码，在以正确的用户账号和密码登录的情况下，使用该账户的人即被视为用户本人，其所做出的任何行为也将视为用户的行为，用户应当为此账号及密码登入系统后所开始的一连串行为或活动负责。<span><br>
-                        </span>用户在使用有牛角科技网络服务过程中，必须遵循以下原则：<span><br>
+                        </span>三五更向用户提供的网络服务本身属于商业行为，用户需要支付相应的费用。<span><br>
+                        </span>用户有义务妥善保管使用三五更的账号及密码，在以正确的用户账号和密码登录的情况下，使用该账户的人即被视为用户本人，其所做出的任何行为也将视为用户的行为，用户应当为此账号及密码登入系统后所开始的一连串行为或活动负责。<span><br>
+                        </span>用户在使用有三五更网络服务过程中，必须遵循以下原则：<span><br>
                         </span>（<span>1</span>）遵守中华人民共和国有关的法律和法规；<span><br>
                         </span>（<span>2</span>）不得为任何非法目的而使用网络服务系统；<span><br>
                         </span>（<span>3</span>）遵守所有与网络服务有关的网络协议、规定和程序；<span><br>
-                        </span>（<span>4</span>）不会以任何可能损害、攻击、使服务器过度负荷或其他可能破坏牛角科技所提供的服务；<span><br>
-                        </span>（<span>5</span>）不得利用牛角科技网络服务系统进行任何可能对互联网的正常运转造成不利影响或可能干扰他人以正常方式使用牛角科技所提供的服务的方式使用牛角科技的服务的行为；<span><br>
-                        </span>（<span>6</span>）不得利用牛角科技网络服务系统传输任何骚扰性的、中伤他人的、辱骂性的、恐吓性的、庸俗淫秽的或其他任何非法的信息资料；<span><br>
-                        </span>（<span>7</span>）不得利用牛角科技网络服务系统进行其他不利于牛角科技的行为；<span><br>
-                        </span>（<span>8</span>）就牛角科技及合作商业伙伴的服务、产品、业务咨询应采取相应机构提供的沟通渠道，不得在公众场合发布有关牛角科技及相关服务的负面宣传；<span><br>
-                        </span>（<span>9</span>）如发现任何非法使用用户账号或账号出现安全漏洞的情况，应立即通告牛角科技。<span><br>
+                        </span>（<span>4</span>）不会以任何可能损害、攻击、使服务器过度负荷或其他可能破坏三五更所提供的服务；<span><br>
+                        </span>（<span>5</span>）不得利用三五更网络服务系统进行任何可能对互联网的正常运转造成不利影响或可能干扰他人以正常方式使用三五更所提供的服务的方式使用三五更的服务的行为；<span><br>
+                        </span>（<span>6</span>）不得利用三五更网络服务系统传输任何骚扰性的、中伤他人的、辱骂性的、恐吓性的、庸俗淫秽的或其他任何非法的信息资料；<span><br>
+                        </span>（<span>7</span>）不得利用三五更网络服务系统进行其他不利于三五更的行为；<span><br>
+                        </span>（<span>8</span>）就三五更及合作商业伙伴的服务、产品、业务咨询应采取相应机构提供的沟通渠道，不得在公众场合发布有关三五更及相关服务的负面宣传；<span><br>
+                        </span>（<span>9</span>）如发现任何非法使用用户账号或账号出现安全漏洞的情况，应立即通告三五更。<span><br>
                             8</span>．取消账号<span><br>
-                        </span>任何用户有如下任意一种或多种行为而导致其账号被取消，牛角科技不承担任何责任：<span><br>
+                        </span>任何用户有如下任意一种或多种行为而导致其账号被取消，三五更不承担任何责任：<span><br>
                         </span>（<span>1</span>）有违反本服务协议的行为；<span><br>
                         </span>（<span>2</span>）滥用所享受的权利；<span><br>
                         </span>（<span>3</span>）提供虚假注册信息；<span><br>
-                        </span>（<span>4</span>）通过不正当手段使用牛角科技网络服务；<span><br>
-                        </span>（<span>5</span>）有损牛角科技及其权利人、关系企业或合作对象的权益和其他用户合法权益的行为；<span><br>
+                        </span>（<span>4</span>）通过不正当手段使用三五更网络服务；<span><br>
+                        </span>（<span>5</span>）有损三五更及其权利人、关系企业或合作对象的权益和其他用户合法权益的行为；<span><br>
                         </span>（<span>6</span>）违反中国的法律、法规；<span><br>
                         </span>（<span>7</span>）违背社会风俗和社会道德的行为；<span><br>
-                        </span>（<span>8</span>）其他违反牛角科技相关规定的行为。<span><br>
+                        </span>（<span>8</span>）其他违反三五更相关规定的行为。<span><br>
                             9.</span>服务中断<span><br>
-                        </span>发生下列情形之一时，即使未经通知，牛角科技有权中断所提供的网络服务，并不需要向用户承担任何责任：<span><br>
-                        </span>（<span>1</span>）定期或不定期地对牛角科技的网络设备进行必要的保养及施工；<span><br>
-                        </span>（<span>2</span>）因牛角科技、牛角科技的合作方或电信网络系统软硬件设备的故障、失灵或人为操作的疏失；<span><br>
-                        </span>（<span>3</span>）他人侵入牛角科技的网络，篡改、删改或伪造、编造网站数据；<span><br>
+                        </span>发生下列情形之一时，即使未经通知，三五更有权中断所提供的网络服务，并不需要向用户承担任何责任：<span><br>
+                        </span>（<span>1</span>）定期或不定期地对三五更的网络设备进行必要的保养及施工；<span><br>
+                        </span>（<span>2</span>）因三五更、三五更的合作方或电信网络系统软硬件设备的故障、失灵或人为操作的疏失；<span><br>
+                        </span>（<span>3</span>）他人侵入三五更的网络，篡改、删改或伪造、编造网站数据；<span><br>
                         </span>（<span>4</span>）不可抗力原因；<span><br>
                         </span>（<span>5</span>）由于相关机构基于法律或法定程序的要求；<span><br>
                         </span>（<span>6</span>）其他基于法律或国家政策的规定。<span><br>
                             10</span>．终止服务<span><br>
-                        </span>用户或牛角科技可随时根据实际情况终止服务，牛角科技不需对任何用户或第三人负责而随时终止服务。<span><br>
+                        </span>用户或三五更可随时根据实际情况终止服务，三五更不需对任何用户或第三人负责而随时终止服务。<span><br>
                             11</span>．隐私保护<span><br>
-                        </span>保护用户（特别是未成年人）的隐私是牛角科技的一项基本政策。<span><br>
-                        </span>牛角科技将采取商业上合理的方式以保护用户的个人资料的安全。牛角科技将使用通常可以获得的安全技术和程序来保护用户的个人资料不被未经授权的访问、使用或泄漏。对于非因牛角科技的过错而造成用户账号的<span><br>
-                        </span>丢失或用户个人资料的泄密，牛角科技将不会承担任何责任。<span><br>
-                        </span>牛角科技承诺在未获得用户的许可前，不会公开用户注册资料中的真实姓名、身份证号码、家庭住址、通讯地址、邮政编码、电子邮箱、密码、密码保护提示问题及答案等。但如果出现下列情况将不在此承诺范围内：<span><br>
-                        </span>（<span>1</span>）用户允许牛角科技披露这些个人资料；<span><br>
-                        </span>（<span>2</span>）有关法律法规或行政规章要求牛角科技披露用户的个人资料；<span><br>
-                        </span>（<span>3</span>）司法机关或行政机关基于法定程序要求牛角科技披露用户的个人资料；<span><br>
-                        </span>（<span>4</span>）为保护牛角科技的知识产权和其他财产权益，需要披露用户的个人资料；<span><br>
+                        </span>保护用户（特别是未成年人）的隐私是三五更的一项基本政策。<span><br>
+                        </span>三五更将采取商业上合理的方式以保护用户的个人资料的安全。三五更将使用通常可以获得的安全技术和程序来保护用户的个人资料不被未经授权的访问、使用或泄漏。对于非因三五更的过错而造成用户账号的<span><br>
+                        </span>丢失或用户个人资料的泄密，三五更将不会承担任何责任。<span><br>
+                        </span>三五更承诺在未获得用户的许可前，不会公开用户注册资料中的真实姓名、身份证号码、家庭住址、通讯地址、邮政编码、电子邮箱、密码、密码保护提示问题及答案等。但如果出现下列情况将不在此承诺范围内：<span><br>
+                        </span>（<span>1</span>）用户允许三五更披露这些个人资料；<span><br>
+                        </span>（<span>2</span>）有关法律法规或行政规章要求三五更披露用户的个人资料；<span><br>
+                        </span>（<span>3</span>）司法机关或行政机关基于法定程序要求三五更披露用户的个人资料；<span><br>
+                        </span>（<span>4</span>）为保护三五更的知识产权和其他财产权益，需要披露用户的个人资料；<span><br>
                         </span>（<span>5</span>）在紧急情况下为保护其他用户和社会大众的人身安全，需要披露用户的个人资料；<span><br>
                         </span>（<span>6</span>）本公司合理怀疑有危害国家安全事情发生时，本公司主动将相关资料供公安机关调查处理；<span><br>
-                        </span>（<span>7</span>）牛角科技可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与牛角科技同等的保护用户隐私的责任，则牛角科技可将用户的注册资料等提供给该第三方。<span><br>
-                        </span>在不透露单个用户隐私资料的前提下，牛角科技有权对整个用户数据库进行技术分析并对已进行分析、整理后的用户数据库进行商业上的利用。<span><br>
+                        </span>（<span>7</span>）三五更可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与三五更同等的保护用户隐私的责任，则三五更可将用户的注册资料等提供给该第三方。<span><br>
+                        </span>在不透露单个用户隐私资料的前提下，三五更有权对整个用户数据库进行技术分析并对已进行分析、整理后的用户数据库进行商业上的利用。<span><br>
                             12</span>．违约责任<span><br>
-                        </span>用户同意保障和维护牛角科技及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给牛角科技或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。<span><br>
-                        </span>用户同意补偿牛角科技的母公司、子公司、关系企业、受雇人、及一切相关人员，因用户违反相关法律法规或本用户协议所产生之一切损害及责任。<span><br>
+                        </span>用户同意保障和维护三五更及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给三五更或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。<span><br>
+                        </span>用户同意补偿三五更的母公司、子公司、关系企业、受雇人、及一切相关人员，因用户违反相关法律法规或本用户协议所产生之一切损害及责任。<span><br>
                             13</span>．免责声明<span><br>
-                        </span>在适用法律允许的最大范围内，牛角科技明确表示不提供任何其他类型的保证，不论是明示的或默示的，包括但不限于适销性、适用性、可靠性、准确性、完整性、无病毒以及无错误的任何默示保证和责任。<span><br>
-                        </span>另外，在适用法律允许的最大范围内，牛角科技并不担保牛角科技所提供的服务一定能满足用户的要求，也不担保提供的服务不会被中断，并且对服务的及时性，安全性，出错发生，以及信息是否能准确，及时，顺利的传送均不作任何担保。<span><br>
-                        </span>在适用法律允许的最大范围内，牛角科技不就因用户使用牛角科技的服务引起<span> `</span>的，或在任何方面与牛角科技的服务有关的任何意外的、非直接的、特殊的、或间接的损害或请求（包括但不限于因人身伤害、因隐私泄漏、因未能履行包括诚信或合理谨慎在内的任何责任、因过失和因任何其他金钱上的损失或其他损失而造成的损害赔偿）承担任何责任。<span><br>
-                        </span>用户若反对任何服务协议的条款或对后来的协议的修改有异议，或对牛角科技的服务不满，用户只有以下的追索权：<span><br>
-                        </span>（<span>1</span>）不再使用牛角科技服务；<span><br>
-                        </span>（<span>2</span>）请求牛角科技注销用户的牛角科技账号；<span><br>
-                        </span>（<span>3</span>）通告牛角科技停止该用户接受牛角科技网络服务的资格。<span><br>
+                        </span>在适用法律允许的最大范围内，三五更明确表示不提供任何其他类型的保证，不论是明示的或默示的，包括但不限于适销性、适用性、可靠性、准确性、完整性、无病毒以及无错误的任何默示保证和责任。<span><br>
+                        </span>另外，在适用法律允许的最大范围内，三五更并不担保三五更所提供的服务一定能满足用户的要求，也不担保提供的服务不会被中断，并且对服务的及时性，安全性，出错发生，以及信息是否能准确，及时，顺利的传送均不作任何担保。<span><br>
+                        </span>在适用法律允许的最大范围内，三五更不就因用户使用三五更的服务引起<span> `</span>的，或在任何方面与三五更的服务有关的任何意外的、非直接的、特殊的、或间接的损害或请求（包括但不限于因人身伤害、因隐私泄漏、因未能履行包括诚信或合理谨慎在内的任何责任、因过失和因任何其他金钱上的损失或其他损失而造成的损害赔偿）承担任何责任。<span><br>
+                        </span>用户若反对任何服务协议的条款或对后来的协议的修改有异议，或对三五更的服务不满，用户只有以下的追索权：<span><br>
+                        </span>（<span>1</span>）不再使用三五更服务；<span><br>
+                        </span>（<span>2</span>）请求三五更注销用户的三五更账号；<span><br>
+                        </span>（<span>3</span>）通告三五更停止该用户接受三五更网络服务的资格。<span><br>
                             14</span>、法律管辖<span><br>
-                        </span>本产品及服务相关规范的解释及适用，以及用户因使用本产品及服务而与牛角科技之间所产生的权利义务关系，应适用中华人民共和国法律。因此所产生的争议，均应在北京有管辖权的人民法院提起诉讼。<span><br>
-                        </span>此外，如果本协议的任何内容与法律相抵触，应以法律规定为准，同时牛角科技将重新解释或修改相关的条款，而本协议的其他部分将保持对用户的法律效力。</span><span style="font-family: 微软雅黑, sans-serif;">
+                        </span>本产品及服务相关规范的解释及适用，以及用户因使用本产品及服务而与三五更之间所产生的权利义务关系，应适用中华人民共和国法律。因此所产生的争议，均应在北京有管辖权的人民法院提起诉讼。<span><br>
+                        </span>此外，如果本协议的任何内容与法律相抵触，应以法律规定为准，同时三五更将重新解释或修改相关的条款，而本协议的其他部分将保持对用户的法律效力。</span><span style="font-family: 微软雅黑, sans-serif;">
                         <o:p></o:p>
                     </span></div>
 
