--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>牛角科技官网</title>
+  <title>北京三五更文化传媒有限公司</title>
   <meta name="keywords"
-    content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
-  <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
+    content="北京三五更文化传媒有限公司,免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
+  <meta name="description" content="北京三五更文化传媒有限公司,新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
             <ul class="right">
               <li class="hover"><a href="index.html">首页</a></li>
               <!-- <li><a href="comic.html">漫画</a></li> -->
-              <li><a href="expression.html">动态表情</a></li>
+              <!-- <li><a href="expression.html">动态表情</a></li> -->
               <li><a href="news.html">行业资讯</a></li>
               <li><a href="aboutus.html">关于我们</a></li>
             </ul>
