--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>行业资讯_牛角科技</title>
+  <title>行业资讯_北京三五更文化传媒有限公司</title>
   <meta name="keywords"
     content="免费阅读,小说,在线小说,阅读器,电子书,手机看书,移动阅读,搜小说,网络小说,原创网文,看书神器,网文,热门小说,追书,书城,热门小说,免费小说,免费书城,android版,ios版,ipad版">
   <meta name="description" content="新生代的的移动读书软件，同时支持Android与iOS平台，支持在线/离线阅读海量原创网络文学">
@@ -112,6 +112,7 @@
 
   .news-item p>span {
     float: right;
+    color: #ff4300;
   }
 
   .amountLayer {
@@ -152,7 +153,7 @@
       <ul class="right">
         <li><a href="index.html">首页</a></li>
         <!-- <li><a href="comic.html">漫画</a></li> -->
-        <li><a href="expression.html">动态表情</a></li>
+        <!-- <li><a href="expression.html">动态表情</a></li> -->
         <li class="hover"><a href="news.html">行业资讯</a></li>
         <li><a href="aboutus.html">关于我们</a></li>
       </ul>
@@ -186,7 +187,7 @@
       如无会员账号，请点击<span>注册</span>。
     </div>
   </div>
-  <script src="./static/js/news.js?v=20190826"></script>
+  <script src="./static/js/news.js?v=20210514"></script>
   <script src="./static/js/common.js"></script>
   <!-- <script src="./static/js/login.js"></script> -->
   <!-- <div class="isLogin hidden">
