--- a/register.html
+++ b/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>注册_牛角科技</title>
+<title>注册_三五更</title>
 <meta http-equiv="Content-Disposition" content="attachment;">
 <link href="./static/css/swiper-3.4.2.min.css" rel="stylesheet">
 <link href="./static/css/reset.css" rel="stylesheet">
